# NSU_THIRD_SEMESTER

NSU_2nd_COURSE/: CMakeLists.txt  data_writer.cpp  data_writer.h  file_processing.cpp  file_processing.h  main.cpp  output.csv
lab0a/: CMakeLists.txt  main.cpp  module1.cpp  module3.cpp  module3.h  Основы ООП - Задача 0 (intro).docx
lab1a/: CMakeLists.txt  bitarray.cpp  bitarray.h  bitarray_tests.cpp  lab1a  main.cpp  Основы ООП  - Задача 1 (BitArray).docx
lab2b/: CMakeLists.txt  cell.cpp  cell.h  file_manager.cpp  file_manager.h  game.cpp  game.h  main.cpp  main_functional.cpp  parser.cpp  parser.h  Основы ООП - Задача 2 (Жизнь).docx
lab3/: CMakeLists.txt  WAVfile.cpp  WAVfile.h  converters.cpp  converters.h  exceptions.cpp  exceptions.h  main.cpp  parser.cpp  parser.h  sound_processor.cpp  sound_processor.h  tests.cpp  Основы ООП - Задача 3 (Sound Processor).docx
lab4/: CMakeLists.txt  csv_parser.cpp  csv_parser.h  errors.h  main.cpp  tests.cpp  tuple_printer.h  tuple_reader.h  Основы ООП - Задача 4 (templates) (1).docx
